[package]
name = "boringtap"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.7"
tokio = { version = "1", features = [ "full" ] }
tokio-tun = "0.7.0"
etherparse = "0.12.0"
base64 = "0.13.0"
untrusted = "0.9.0"
libc = "0.2"
parking_lot = "0.12"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
ring = "0.16"
x25519-dalek = { version = "2.0.0-pre.1", features = ["reusable_secrets"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
chacha20poly1305 = "0.10.0-pre.1"
aead = "0.5.0-pre.2"
blake2 = "0.10"
hmac = "0.12"
xxhash-rust = { version = "0.8.5", features = [ "xxh3" ] }
multi-map = "1.3.0"
genetlink = "*"
rtnetlink = "*"
netlink-packet-generic = "*"
netlink-packet-core = "*"
futures = "0.3.24"
glommio = "0.7.0"

[profile.release]
debug = true
